appId: com.konylepanini.harmony-paws
---
- runFlow:
    file: ../components/login.yaml

# Le reste de vos commandes de test pour l'invitation
- tapOn:
    point: "50%,55%"
- "scroll"
- tapOn: "On se balade ?"
- tapOn: "Envoyer sans message"
